src/objects/Platform__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Technology Platform Knowledge</description>
    <fields>
        <fullName>Atom__c</fullName>
        <description>Body of an Article</description>
        <inlineHelpText>This rich-text area is for the body of your content. The content should not deviate from the overall theme as indicated in the title and/or summary. This content should stand on its own as a cohesive and complete source of information.</inlineHelpText>
        <label>Atom</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Draft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag the draft version is ready for approval</description>
        <inlineHelpText>Check this box if the article is ready to move into the approval workflow. An article cannot move out of Draft Stage without this box being checked. If you&apos;re completely satisfied with your draft, then click the &quot;Submit for Approval&quot; button.</inlineHelpText>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_0__c</fullName>
        <description>Level 0 section for this sequence.</description>
        <inlineHelpText>Select a Level 0 section for this sequence.</inlineHelpText>
        <label>Level 0</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Platform Application</fullName>
                    <default>true</default>
                    <label>Salesforce Platform Application</label>
                </value>
                <value>
                    <fullName>O365 Platform Application</fullName>
                </value>
                <value>
                    <fullName>Amazon Web Servies Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <description>Level 1 section for this sequence.</description>
        <inlineHelpText>Select a Level 1 section for this sequence.</inlineHelpText>
        <label>Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overview</fullName>
                </value>
                <value>
                    <fullName>Integrations</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Visual Walkthrough</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <description>Level 2 section for this sequence.</description>
        <inlineHelpText>Select a Level 2 section for this sequence.</inlineHelpText>
        <label>Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Level_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy State</fullName>
                </value>
                <value>
                    <fullName>Current State</fullName>
                </value>
                <value>
                    <fullName>Future State</fullName>
                </value>
                <value>
                    <fullName>Salesforce Platform Components</fullName>
                </value>
                <value>
                    <fullName>Custom Components</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Activity Diagram</fullName>
                </value>
                <value>
                    <fullName>Object Schema</fullName>
                </value>
                <value>
                    <fullName>Validation Rules</fullName>
                </value>
                <value>
                    <fullName>Workflows</fullName>
                </value>
                <value>
                    <fullName>Triggers</fullName>
                </value>
                <value>
                    <fullName>Batch Jobs</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Programmatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Title__c</fullName>
        <description>Title for Tablet / Mobile View - Maximum 37 characters - Mandatory if the Platform Title is more than 37 characters</description>
        <inlineHelpText>Title for Tablet / Mobile View</inlineHelpText>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relationship to Series object</description>
        <inlineHelpText>Creates relationship to Series</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>Salesforce Products</value>
            </filterItems>
            <infoMessage>Search by Salesforce Custom Application or Product name.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>Platforms</relationshipLabel>
        <relationshipName>Platforms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of an article through an approval process</description>
        <inlineHelpText>Tracks the stages of an article through an approval process</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Video component to display along with this article.</inlineHelpText>
        <label>Video</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Platforms</relationshipLabel>
        <relationshipName>Platforms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Platform</label>
    <pluralLabel>Platforms</pluralLabel>
    <validationRules>
        <fullName>Required_Mobile_Title</fullName>
        <active>true</active>
        <description>Mobile Title Needed if Platform Title is larger than 37 characters</description>
        <errorConditionFormula>AND( (LEN(Title)&gt;37) , ISBLANK( Mobile_Title__c ) )</errorConditionFormula>
        <errorMessage>Please enter the Mobile Title (Article Title is too large for Mobile view)</errorMessage>
    </validationRules>
</CustomObject>